# scorpion-headers

./: .gitignore  LICENSE  README.md
examples/StateMachine/: CMakeLists.txt  main.cpp
include/: StateMachine.hpp
test/: CMakeLists.txt  conanfile.txt  main.cpp
test/src/: StateMachineTests.cpp
